tests/syntax_error/lexer.err.out
error: lexer.err.li 1,1: too many decimal points in number
    1 | 1.0.0
      | ^^^^^
error: lexer.err.li 3,1: unexpected token `eof`, expecting `single_quote`
    3 | 
      | ^
